# supreme-infra

./: .dockerignore  .gitignore  .njordscan.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  0-auth-deployment.md  2test.md  60rps.md  DATABASE_CONFIGURATION_SUMMARY.md  DATABASE_PASSWORD_SETUP.md  DEPLOY_DATABASE_GUIDE.md  FIX_MISSING_TABLES.md  LOKI_SETUP.md  MIGRATION_SUMMARY.md  PYTHON_IDE_SETUP.md  QUICK_FIX_IDE.md  QUICK_REFERENCE.md  README.md  WORKFLOW_SUMMARY.md  auth-deployment.md  biome.json  change-md-prompt.md  check_metrics.sh  common-todo-list.md  docker-compose.dev.yml  fixme-web-profile-ssr.md  generate-load-test.js  hello2.dockerfile  jest.config.global.ts  jest.config.ssr.ts  killme.md  kk.yaml  knip.config.ts  lab-5.md  lab-6.md  lab3.md  lab4.md  load-test-auth.js  load-test-har.js  (+21 more)
.ai/memory-bank/: code-style.md  release-and-helm.md
.claude/: settings.json
.cursor/rules/: kubectl-rules.mdc
.github/workflows/: cd.yml  cd2.yml  ci.yml  deploy-database.yml  deploy-grafana.yml  deploy-ingress-nginx.yml  deploy-loki.yml  deploy-minio.yml  deploy-pgbouncer.yml  deploy-redis.yml  deploy-victoria-metrics.yml  generate-infrastructure.yml  precommit-checks.yml  precommit-relese.yml  push.yml  security-checks.yml  validate-pr-title.yml  validate_pr_title.yml
backend/: package-lock.json
docs/: DATABASE_MIGRATIONS.md  adding-new-database.md  ci.md  code-style.md  database-deployment-workflow.md  database-init-scripts.md  database-migration-guide.md  database-secrets-configuration.md  database-setup.md  databases-quickstart.md  databases.md  deeplinks.md  infrastructure-generator.md  monitoring-setup.md  monorepo-packages-setup.md  quick-start-database.md  release-process.md  secrets-management.md  svg-imports.md
docs/arch-review/: PDF_ARCHITECTURE.md  user-data-structure.md
docs/prompts/: 01-04-2026__02-30__sync-core-messages-instances-cache.md  26-03-2026__19-30__prompt.md  26-03-2026__19-30__prompt.old.md  27-03-2025__20-29__prompt.md  27-03-2026__04-14__mocks-prmopt-result.md  27-03-2026__23-48__create-cal-dav-front-integration.md  29-03-2026__19-40__backend-dev-instructions.md  29-03-2026__19-40__frontend-dev-instructions.md  29-03-2026__20-23__redis-optimization-client-info.md  29-03-2026__21-00__s3-file-service-instructions.md  x-27-03-2025__20-29__prompt.md  x-27-03-2026__04-40__migrate-to-post-css-result.md  x-29-03-2026__19-40__backend-dev-instructions.md  x-29-03-2026__19-40__frontend-dev-instructions.md  x-29-03-2026__21-00__s3-file-service-instructions.md
docs/temp/: teachers_created.csv
e2e/: mock-server.ts  mocks.ts  package.json  playwright.config.ts  run-e2e.ts  test-suites.md  tsconfig.json
e2e/src/: contants.ts  fixtures.ts
e2e/tests/: example.spec.ts  posts.spec.ts
frontend/: jest.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
i18n/: README.md  keyset.json
infra/: check_pr_title.py  services.yaml
infra/databases/: TROUBLESHOOTING_MIGRATIONS.md
infra/generate-service/: Readme.md  index.ts  services.json  update-cd-workflow.ts  update-security-checks.ts
infra/generate-values/: defaults.yaml  environment-overrides.yaml  index.ts  (+2 more)
services/: AUTH_GUIDE.md  LOGGING.md
services/core-client-info/: .env.example  .gitignore  API_EXAMPLES.md  Dockerfile  JWT_FORMAT.md  OPTIMISAITION.md  OPTIMISATION.md  README.md  TESTING.md  _auth_routes_generated.py  openapi.json  pyproject.toml  router.yaml  service.yaml
services/core-client-info/alembic/: env.py
services/core-client-info/alembic/versions/: 001_add_test_data.py
services/core-client-info/app/: config.py  database.py  instrumentation.py  main.py
services/core-client-info/app/models/: __init__.py  rating.py  reference.py  student.py  subject.py  user.py
services/core-client-info/app/routers/: internal.py  orders.py  profile.py  rating.py  settings.py  status.py  subjects.py
services/core-client-info/app/schemas/: profile.py  rating.py  settings.py  subject.py
services/system-files-storage/: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  _auth_routes_generated.py  openapi.json  prompt2.md  pyproject.toml  router.yaml  service.yaml
services/system-files-storage/app/: config.py  dependencies.py  instrumentation.py  main.py  rate_limit.py  s3.py
services/system-files-storage/app/routers/: status.py  upload.py
temp/: normalize_ingredients.js  temp_analyze.js
test/: app.e2e-spec.ts
(+1063 files in other folders)
